--- a/modules/employee-service/employee-service-service/src/main/resources/service.properties
+++ b/modules/employee-service/employee-service-service/src/main/resources/service.properties
@@ -12,6 +12,6 @@
 ## Build
 ##
 
-    build.namespace=vc
-    build.number=18
-    build.date=1676541396096
+    build.namespace=FOO
+    build.number=1
+    build.date=1676541403351
